Example scripts added.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 build/
 dist/
 signal_grad_cam.egg-info/
+examples/data/datasets/signal_data_1D/ecg.pkl
+examples/data/datasets/signal_data_1D/people_car_keys.wav
+examples/data/datasets/signal_data_1D/sign_fingersnap.wav
+examples/data/models/ecg_model_1D_torch.pth
+examples/outputs/
+signal_grad_cam/__pycache__/
